--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 
 <html>
+	
 	<head>
   	</head>
-	<body>
-		<h1>My name is Kaylee!</h1>
-		<h2>I love photography.</h2 >
-		<p>I plan to have a career in Graphic Design after I graduate. This is where I will be sharing my photography with you!</p>
-		<p>What got me into photography and graphic design was my love for being in yearbook in high school.</p>
-		<p>I took that love and turned it into a major and something I want to learn more about and do it for the rest of my life.</p>
-		<h2>Maybe I will start my own business someday!</h2>
-		<p>I could use my photography to make cards or inspirational art.</p>
+	<body style="background-color:pink;">
+		<h1 style="font-family:helvetica;">My name is Kaylee!</h1>
+		<h2 style="color:purple;">I love photography.</h2 >
+		<p style="font-family:helvetica;">I plan to have a career in Graphic Design after I graduate. This is where I will be sharing my photography with you!</p>
+		<p style="font-family:helvetica;">What got me into photography and graphic design was my love for being in yearbook in high school.</p>
+		<p style="font-family:helvetica;">I took that love and turned it into a major and something I want to learn more about and do it for the rest of my life.</p>
+		<h2 style="color:purple;">Maybe I will start my own business someday!</h2>
+		<p style="font-family:helvetica;">I could use my photography to make cards or inspirational art. Right now I use my skills for the yearbook staff at GU.</p>
 		<br/>
+		<p style="font-family:helvetica;">Some things that I like to take pictures of include:</p>
+		<ul style="list-style-type:square">
+			<li style="font-family:helvetica;">Animals</li>
+			<li style="font-family:helvetica;">Sports</li>
+			<li style="font-family:helvetica;">Friends and family</li>
+			<li style="font-family:helvetica;">Portraits</li>
+		<h2 style="color:purple;">Below is some of the work that I have done :)</h2>
+		<br/>
+		<img src="IMG_9801.JPG"alt="Intercultural Night" width="500" height="350">
+		<img src="IMG_0031.JPG"alt="Women's Basketball" width="500" height="350">
+		<img src="IMG_9217.JPG"alt="Marlon" width="500" height="350">
+		<img src="IMG_9692.JPG"alt="Intercultural Night2" width="500" height="350">
 	</body>
 </html>
