--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
 			<li style="font-family:helvetica;">Portraits</li>
 		<h2 style="color:purple;">Below is some of the work that I have done :)</h2>
 		<br/>
-		<img src="IMG_9801.JPG"alt="Intercultural Night" width="500" height="350">
-		<img src="IMG_0031.JPG"alt="Women's Basketball" width="500" height="350">
-		<img src="IMG_9217.JPG"alt="Marlon" width="500" height="350">
-		<img src="IMG_9692.JPG"alt="Intercultural Night2" width="500" height="350">
+		
+
+		<table>
+			<tbody>
+				<tr>
+					<td><img src="IMG_9801.JPG"alt="Intercultural 							Night" width="500" height="350"></td>
+					<td><img src="IMG_283.jpg"alt="Men's Basketball" 						width="500" height="350"></td>
+				</tr>
+				<tr>
+					<td><img src="IMG_9217.JPG"alt="Marlon" 							width="500" height="350"></td>
+					<td><img src="IMG_9692.JPG"alt="Intercultural 							Night2" width="500" height="350"></td>
+				</tr>
+
+
+			</tbody>
+		</table>
 	</body>
 </html>
