--- a/index.html
+++ b/index.html
@@ -28,20 +28,14 @@
 		<h2>Below is some of the work that I have done :)</h2>
 		<br/>
 		
-
-		<table align="center">
-			<tbody>
-				<tr>
-					<td><img src="IMG_9801.JPG"alt="Intercultural 							Night" width="500" height="350"></td>
-					<td><img src="IMG_283.jpg"alt="Men's Basketball" 						width="500" height="350"></td>
-				</tr>
-				<tr>
-					<td><img src="IMG_9217.JPG"alt="Marlon" 							width="500" height="350"></td>
-					<td><img src="IMG_9692.JPG"alt="Intercultural 							Night2" width="500" height="350"></td>
-				</tr>
-
-
-			</tbody>
-		</table>
+		<img src="IMG_9801.JPG"alt="Intercultural Night" width="500" height="350">
+		<img src="IMG_9217.JPG"alt="Marlon" width="500" height="350">
+		<img src="IMG_9692.JPG"alt="Intercultural Night2" width="500" height="350">
+		<img src="IMG_0031.JPG"alt="Basketball" width="500" height="350">
+		<img src="IMG_0283.JPG"alt="Basketball2" width="500" height="350">
+		<img src="IMG_0586.JPG"alt="Horse and Child" width="500" height="350">
+			</tr>
+		</tbody>
+	</table>
 	</body>
 </html>
