--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   	</head>
 	<body style="background-color:pink;">
 		<h1 class='color'>My name is Kaylee!</h1>
+		<p class='color'>My assignments for Web Programming:</p>
+		<center><a href="file:///Users/kayleemontgomery/Desktop/website/royals.html">Baseball</a></center></br>
+		<center><a href="file:///Users/kayleemontgomery/Desktop/pokemon.html">Pokemon</a></center></br>
+		<center><a href="file:///Users/kayleemontgomery/Desktop/website/sources.html">Sources</a></center></br>
 		<h2 class='color'>I love photography.</h2 >
 		<p class='color'>I plan to have a career in Graphic Design after I graduate. This is where I will be sharing my photography with you!</p>
 		<p class='color'>What got me into photography and graphic design was my love for being in yearbook in high school.</p>
@@ -33,5 +37,7 @@
 			</tr>
 		</tbody>
 	</table>
+	
 	</body>
+
 </html>
