--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<p class='color'>My assignments for Web Programming:</p>
 		<center><a href="file:///Users/kayleemontgomery/Desktop/website/royals.html">Baseball</a></center></br>
 		<center><a href="file:///Users/kayleemontgomery/Desktop/pokemon.html">Pokemon</a></center></br>
-		<center><a href="file:///Users/kayleemontgomery/Desktop/website/sources.html">Sources</a></center></br>
+		<center><a href="file:///Users/kayleemontgomery/Desktop/website/sources.html">Embedded Sources</a></center></br>
+		<center><a href="file:///Users/kayleemontgomery/Desktop/website/javascript.html">JavaScript</a></center></br>
 		<h2 class='color'>I love photography.</h2 >
 		<p class='color'>I plan to have a career in Graphic Design after I graduate. This is where I will be sharing my photography with you!</p>
 		<p class='color'>What got me into photography and graphic design was my love for being in yearbook in high school.</p>
